Added Rag pdf feature and updated readme

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,11 @@
   "description": "",
   "dependencies": {
     "@getbrevo/brevo": "^3.0.1",
-    "@google/generative-ai": "^0.21.0",
+    "@langchain/community": "^1.1.12",
+    "@langchain/core": "^1.1.19",
+    "@langchain/google-genai": "^2.1.15",
+    "@langchain/mongodb": "^1.1.0",
+    "@langchain/textsplitters": "^1.0.1",
     "@tavily/core": "^0.7.1",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
@@ -22,8 +26,11 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^1.2.18",
     "mongoose": "^8.16.4",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.13",
+    "pdf-parse": "^1.1.1",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
