--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "patch-package"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +31,7 @@
     "mongoose": "^8.16.4",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.13",
+    "patch-package": "^8.0.1",
     "pdf-parse": "^1.1.1",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
