added missing patchh file

--- a/backend/package.json
+++ b/backend/package.json
@@ -31,12 +31,12 @@
     "mongoose": "^8.16.4",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.13",
-    "patch-package": "^8.0.1",
     "pdf-parse": "^1.1.1",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "patch-package": "^8.0.1"
   }
 }
